# SolanaSwapAgent

./: .env.example  README.md
offchain/: .env  requirements-minimal.txt  requirements.txt  test_basic.py  test_basic_simple.py
offchain/src/: __init__.py  config.py  dex_clients.py  price_monitor.py  swap_agent.py  swap_executor.py  utils.py
onchain/: Anchor.toml
onchain/programs/swap-agent/: Cargo.toml
onchain/programs/swap-agent/src/: lib.rs
